fixed server code

--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch index.js",
     "start": "node server/index.js",
-    "build": "cd client && npm install && npm run build"
+    "build": "npm install"
   },
   "author": "Serhii Bondarchuck",
   "license": "ISC",
