--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch index.js",
-    "start": "node server/index.js",
+    "start": "node index.js",
     "build": "npm install"
   },
   "author": "Serhii Bondarchuck",
