--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT = 8000
 MONGO_COMPAS_URL = mongodb://localhost:27017/mern-stack
-MONGODB_URL = mongodb+srv://amax9111:ZDK3mWUmwz8Z4Vpr@my-mongo-users.s5ry9q1.mongodb.net/?retryWrites=true&w=majority&appName=my-mongo-users
+MONGODB_URL = mongodb+srv://amax9111:70F3DVRaziNQlPHg@my-mongo-users.s5ry9q1.mongodb.net/my-mongo-users?retryWrites=true&w=majority&appName=my-mongo-users
