--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT = 8000
 MONGO_COMPAS_URL = mongodb://localhost:27017/mern-stack
 MONGODB_URL_OLD = mongodb+srv://amax9111:70F3DVRaziNQlPHg@my-mongo-users.s5ry9q1.mongodb.net/my-mongo-users?retryWrites=true&w=majority&appName=my-mongo-users
-MONGODB_URL = mongodb+srv://amax9111:iFIEGbjyc1voH8op@my-mongo-users.s5ry9q1.mongodb.net/my-mongo-users?retryWrites=true&w=majority&appName=my-mongo-users
+MONGODB_URL = mongodb+srv://amax9111:iFIEGbjyc1voH8op@my-mongo-users.s5ry9q1.mongodb.net/?retryWrites=true&w=majority&appName=my-mongo-users
