--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": " set NODE_ENV=development && node --watch index.js",
-    "start": "node index.js",
+    "dev": "set NODE_ENV=development && node --watch index.js",
+    "start": "set NODE_ENV=production && node index.js",
     "build": "npm install"
   },
   "author": "Serhii Bondarchuck",
