--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ PORT = 8000
 MONGO_COMPAS_LOCAL = mongodb://localhost:27017/mern-stack
 MONGO_COMPAS_MONGODB_URL=mongodb+srv://amax9111:iFIEGbjyc1voH8op@my-mongo-users.s5ry9q1.mongodb.net/list
 MONGODB_URL_BASE = mongodb+srv://amax9111:iFIEGbjyc1voH8op@my-mongo-users.s5ry9q1.mongodb.net/?retryWrites=true&w=majority&appName=my-mongo-users
-DB_NAME = 'list'
+DB_NAME = list
