--- a/client-frontend/.env
+++ b/client-frontend/.env
@@ -1,2 +1,2 @@
-URL_DEPLOY = https://mern-crud-server-psi.vercel.app
-URL_DEV = http://localhost:8000
+REACT_APP_URL_DEPLOY = https://mern-crud-server-psi.vercel.app
+REACT_APP_URL_DEV = http://localhost:8000
